# ed_cpp

./: .clang-format  CMakeLists.txt  README.md  profile.h  test_runner.h  test_utils.h
SORT_BY/: sort_by.cpp  sort_by_main.cpp
UNIQ_ID/: uniq_id.cpp  uniq_id_main.cpp
UPDATE_FIELD/: airline_ticket.h  update_field.cpp  update_field_main.cpp
athlets/: athlets.cpp
bad_macro/: bad_macro_main.cpp
banned_domains/: banned_domains.cpp
banned_domains_sanitize/: banned_domains.cpp
bin_saveload/: saveload.h  test.cpp
black/: .clang-format  CMakeLists.txt  apply_to_many.cpp  apply_to_many.h
black/mython/: lexer.h  mython.cpp  object.cpp  object_holder.cpp  parse.h  (+3 more)
booking/: booking.h  new_booking_providers.h  new_trip_manager.h  old_booking_providers.h  old_trip_manager.h
brown/: .clang-format  README.md
budget_home_desktop/: budget.cpp
budget_professional_desktop/: budget.cpp
budget_professional_mobile/: budget.cpp
cache/: Solution.cpp  main.cpp
comment_server/: README.md  comment_server.cpp  comment_server_main.cpp
concurrent_map/: README.md  concurrent_map.cpp  concurrent_map_main.cpp
deque_via_two_vectors/: deque_via_two_vectors.cpp
double_dispatch/: README.md  collide.cpp  collide_main.cpp  game_object.h  geo2d.h
equals_to_one_of/: equals_to_one_of.cpp  equals_to_one_of.h
expressions/: expressions.cpp  expressions_main.cpp
group_heavy_strings/: group_heavy_strings.cpp  group_heavy_strings_main.cpp
hash_person/: hash_person.cpp  hash_person_main.cpp
hash_set/: hash_set.cpp  hash_set_main.cpp
ini/: README.md  ini.cpp  ini.h  ini_main.cpp
json_printer/: json_printer.cpp
lazy_value/: README.md  lazy_value.cpp  lazy_value_main.cpp
learner/: learner_main.cpp
linked_list/: linked_list_main.cpp
macro_LOG/: log.cpp  log_main.cpp
mython/: comparators.cpp  comparators.h  lexer.cpp  lexer.h  lexer.h.autosave  lexer_test.cpp  mython.cpp  mython.cpp.autosave  object.cpp  object.h  object_holder.cpp  object_holder.h  object_holder_test.cpp  object_test.cpp  parse.cpp  statement.cpp  statement.h
nucleotide/: nucleotide.cpp
optional/: optional.cpp  optional.h
paginator/: paginator.cpp
permutation/: permutation.cpp  permutation_main.cpp
personal_budget_sanitize/: personal_budget.cpp
phone_book/: iterator_range.h  main.cpp  phone_book.cpp  phone_book.h
pipeline/: pipeline.cpp  pipeline_main.cpp
polynomial/: README.md  polynomial.cpp  polynomial_main.cpp
priority_collection/: priority_collection.cpp  priority_collection_main.cpp
red/: CMakeLists.txt
restructuring/: main.cpp  stats_aggregator.cpp  stats_aggregator.h  stats_aggregator_test.cpp  task.md
search_server/: concurrent_map.h  main.cpp  parse.h  search_server.cpp  search_server.h  synchronized_wrapper.h
secondary_index/: secondary_index.cpp  secondary_index_main.cpp
server_stats/: stats.h
set_iterator_increment/: set_iterator_increment.cpp  set_iterator_increment_main.cpp
simple_vector/: simple_vector.h
sort_students/: sort_students_main.cpp
split_into_sentences/: split_into_sentences.cpp
stack_vector/: stack_vector.h
sum_no_overflow/: sum_no_overflow.cpp
svg/: svg.cpp
swap_sort_copy/: swap_sort_copy_main.cpp
table/: CMakeLists.txt  common.cpp  common.h  formula.cpp  formula.h  main.cpp  table.cpp  table.h  table_main.cpp
textures/: Solution.cpp  Textures.h  main.cpp
transport/: descriptions.cpp  descriptions.h  geography.cpp  geography.h  graph.h  json.cpp  json.h  main.cpp  request_json.cpp  request_json.h  request_plain.cpp  request_plain.h  requests.cpp  requests.h  stop.h  svg.cpp  svg.h  svg_renderer.cpp  svg_renderer.h  tests.cpp  tests.h  transport.cpp  transport_catalog.cpp  transport_catalog.h  transport_manager.cpp  transport_manager.h  transport_router.cpp  transport_router.h  utils.h
transport_E_sanitize/: json.cpp  router.h  tests.cpp  transport_router.cpp
transport_db/: application.cpp  application.h  graph.h  json.h  main.cpp  pb_utils.h  router.h  sphere.h  svg_renderer.h  transport_catalog.cpp  transport_catalog.h  transport_catalog.proto  transport_router.cpp  transport_router.h  utils.h
tst_banned_domains/: test_domains.cpp
unique_ptr/: unique_ptr.h
vector/: test.cpp  vector.h
yellow_pages/: merge.cpp  test.cpp  yellow_pages.h
(+89 files in other folders)
